# aludrog

./: .gitignore  CHANGELOG.md  README.md  aludrog.cabal  default.nix  hie.yaml
app/: Main.hs
assets/css/: style.css
assets/scripts/: main.js
src/: Aludrog.hs
src/Aludrog/: Server.hs
