cabal-version:      2.4
name:               aludrog
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Jason Davidson
maintainer:         jad658@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Aludrog

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        lucid,
        servant,
        servant-lucid,
        servant-server,
        text,
        warp,
    hs-source-dirs:   src
    default-language: Haskell2010

executable aludrog
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        aludrog

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite aludrog-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          AludrogTest.hs
    build-depends:    base ^>=4.16.4.0
